# facial-attendance

./: .gitignore  README.md  build.sh  dataset.csv  datasetSmall.csv  map.xml  updateCov.csv
lambda/: CMakeLists.txt
lambda/src/: main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
sim/: CMakeLists.txt
sim/include/: Device.h  Display.h  Simulation.h
sim/src/: Device.cpp  Display.cpp  Simulation.cpp
utils/: CMakeLists.txt
utils/include/: DBConnection.h  EntityState.h  Map.h
utils/include/utils/: DBConnection.h  EntityState.h  Map.h  PathGraph.h
utils/lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Facial-Attendence-Utils.sln  cmake_install.cmake  utils.vcxproj  utils.vcxproj.filters
utils/src/: DBConnection.cpp  Entity.cpp  Map.cpp  PathGraph.cpp
visualizer/: CMakeLists.txt
visualizer/include/: VisualizerApp.h
visualizer/src/: VisualizerApp.cpp
